Product Collection: Handpicked Products should start with product picker (#62989)
* Foundation for product picker

* Updated handpicked product picker

* Move the collection specific controls to the top of filters

* Add changelog

* Update docs etc

* Bring back the comment

* Prefix editor side CSS classes with .wc-block-editor-

* Rename product picker files to be less confusing

* Make Done button always visible but only disabled when no products is chosen

* Update selector in E2E tests

* Rename files to follow kebab-case convention

--- a/plugins/woocommerce/client/blocks/assets/js/blocks/product-collection/editor.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/blocks/product-collection/editor.scss
@@ -192,14 +192,29 @@ $max-button-width: calc(100% / #{$max-button-columns});
 }
 
 // Editor Product Picker
-.wc-blocks-product-collection__editor-product-picker {
-	.wc-blocks-product-collection__info-icon {
+.wc-block-editor-product-collection__product-picker {
+	.wc-block-editor-product-collection__info-icon {
 		fill: var(--wp--preset--color--luminous-vivid-orange, #e26f56);
 	}
 
 	.woocommerce-search-list__search {
 		margin: 0;
 	}
+
+	.wc-block-editor-product-collection__product-picker-info {
+		display: flex;
+		align-items: center;
+		gap: $gap-small;
+	}
+
+	.wc-block-editor-product-collection__product-picker-selection {
+		width: 100%;
+	}
+}
+
+// Editor Taxonomy Picker
+.wc-block-editor-product-collection__taxonomy-picker-selection {
+	width: 100%;
 }
 
 // Product to Show Radio Control
