--- a/plugins/woocommerce/client/blocks/assets/js/editor-components/search-list-control/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/editor-components/search-list-control/style.scss
@@ -80,13 +80,12 @@
 	}
 
 	ul {
+		display: flex;
+		flex-wrap: wrap;
+		gap: $gap-smallest;
 		list-style: none;
 		margin: 0;
 		padding: 0;
-
-		li {
-			float: left;
-		}
 	}
 }
 
