Move product sale badge alongside individual prices in cart and update design (#63012)
* Make badge use theme colour as background, and small font size

* Prevent discount showing twice on mini cart and line prices vertically with button

* Add changelog

* Only show individual save badge if quantity is 1 in cart block

* Remove old badge after merge

* Add state for single item discount badge visibility

* allow badge onto second line on Checkout order summary if small

* Move mini-cart badge back in line after merge conflict

* Add sale badges to checkout order summary

* Make remove button use theme colour

* Align price content centrally

* Don't hide sale badge on mobile

* Align items in checkout order summary

* Extract sale amount calculation to shared util

* Only show quantity on right under item total price

* Remove low stock badge from cart line items

* Remove individual saving and low stock badge in mini cart

* Remove low stock badge and sale badge from checkout order summary

* Reduce spacing under title

* Lint fix

--- a/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/cart-line-items-table/style.scss
+++ b/plugins/woocommerce/client/blocks/assets/js/base/components/cart-checkout/cart-line-items-table/style.scss
@@ -45,6 +45,24 @@ table.wc-block-cart-items {
 		}
 		.wc-block-cart-item__prices {
 			@include font-small-locked;
+			display: flex;
+			flex-direction: row;
+			flex-wrap: nowrap;
+			gap: $gap-smaller;
+			align-items: center;
+
+			@include cart-checkout-mobile-container {
+				flex-wrap: wrap;
+			}
+
+			.price {
+				display: flex;
+				align-items: center;
+
+				&[hidden] {
+					display: none;
+				}
+			}
 		}
 
 		.wc-block-cart-item__quantity {
@@ -64,6 +82,10 @@ table.wc-block-cart-items {
 				&[hidden] {
 					display: none;
 				}
+
+				svg {
+					fill: currentColor;
+				}
 			}
 		}
 		.wc-block-components-product-name {
@@ -71,6 +93,8 @@ table.wc-block-cart-items {
 			display: block;
 			max-width: max-content;
 			line-height: 1.4;
+			margin-bottom: 5px;
+
 			&[hidden] {
 				display: none;
 			}
